--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -78,7 +78,7 @@
         width: 520px;*/
         background: #fbfbf1;
         /*width: 520px;*/
-        width: 560px;
+        /*width: 560px;*/
     }
     .tableexpense {
      background: #ffffff; 
