--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -16,16 +16,12 @@
             </div>
             <div class="modal-body">
                 <div class="table-overflow">
-                    <table class="barattach-5">
-                        <tr>
-                            <td>
-                                <div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
-                            </td>
-                        </tr>
-                    </table>
                     @*<table id="tblQuotation" class="table table-striped table-hover table-responsive tdborrow">*@
                     <table id="tblBorrow" class="table-striped table-hover table-responsive tdborrow">
                         <thead class="bgthead bgfont-12">
+                            <tr>
+                                <th class="bodypadding-5" colspan="7"><div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div></th>
+                            </tr>
                             <tr>
                                 <th class="Rowpointer bodypadding-10">No.</th>
                                 <th class="hidecolumn">ID</th>
