--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -16,8 +16,8 @@
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
-                <th class="Rowpointer">Emp ID</th>
-                <th class="hideANDseek Rowpointer">HR Code</th>
+                <th class="Rowpointer">TechnicianID</th>
+                <th class="hideANDseek Rowpointer">HRID</th>
                 <th class="Rowpointer">Name</th>
                 <th class="hideANDseek Rowpointer">Type</th>
                 <th class="Rowpointer">ID Card</th>
