--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -9,6 +9,7 @@
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CUDS/Technician/TechnicianExpiredCard.js")" type="text/javascript"></script>
 
 <script>
 function GetDetail(currentMonth) {
@@ -187,79 +188,18 @@ $(document).ready(function () {
         <thead class="bgthead">
             <tr>
                 <th>No.</th>
-                <th>รายละเอียด</th>
+                <th class="hidecolumn">TechnicianID</th>
+                <th>ชื่อ-นามสกุล</th>
+                <th class="hideANDseek">ตำแหน่ง</th>
+                <th>ประเภทพนักงาน</th>
                 <th class="hideANDseek">เลขที่บัตร</th>
                 <th>วันหมดอายุ</th>
-                <th>หมายเหตุ</th>
+                <th class="hideANDseek">ประเภทบัตร</th>
+                <th>บริษัท</th>
                 @*<th></th>*@
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0001</td>
-                <td>17/12/2017</td>
-                <td>หมายเหตุ1</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0002</td>
-                <td>18/12/2017</td>
-                <td>หมายเหตุ2</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0003</td>
-                <td>19/12/2017</td>
-                <td>หมายเหตุ3</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0004</td>
-                <td>20/12/2017</td>
-                <td>หมายเหตุ4</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0005</td>
-                <td>21/12/2017</td>
-                <td>หมายเหตุ5</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0001</td>
-                <td>22/12/2017</td>
-                <td>หมายเหตุ6</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0007</td>
-                <td>23/12/2017</td>
-                <td>หมายเหตุ7</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0008</td>
-                <td>24/12/2017</td>
-                <td>หมายเหตุ8</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
-                <td class="hideANDseek">C0009</td>
-                <td>25/12/2017</td>
-                <td>หมายเหตุ9</td>
-            </tr>
-
-        </tbody>
+        <tbody id="ExpiredCard"></tbody>
     </table>
 </section>
 
