--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -56,6 +56,7 @@
                 <th class="hidecolumn">ID</th>
                 <th class="Rowpointer">Doc Version</th>
                 <th class="Rowpointer">ใบเสนอราคา</th>
+                <th class="Rowpointer">ลูกค้า</th>
                 <th class="gvPrice Rowpointer">ราคาขาย</th>
                 <th class="gvCost Rowpointer">ราคาทุน</th>
                 <th class="gvProfit Rowpointer">กำไร</th>
