--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
         @*---------------------------- Menu,Table --------------------------*@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
+        @*---------------------------- Table Paging --------------------------*@
+
         @* ---------------------------- menu -------------------------- *@
         <link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
