--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
         @*---------------------------- Table Paging --------------------------*@
-
+        <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script src="@Url.Content("~/Scripts/Datatable/paging.js")" type="text/javascript"></script>
         @* ---------------------------- menu -------------------------- *@
         <link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
