--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -8,6 +8,27 @@
 <script src="@Url.Content("~/Scripts/CUDS/Products/IndexProducts.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
+<style type="text/css">
+    .paging-nav {
+      text-align: right;
+      padding-top: 2px;
+    }
+
+    .paging-nav a {
+      margin: auto 1px;
+      text-decoration: none;
+      display: inline-block;
+      padding: 1px 7px;
+      background: #91b9e6;
+      color: white;
+      border-radius: 3px;
+    }
+
+    .paging-nav .selected-page {
+      background: #187ed5;
+      font-weight: bold;
+    }
+</style>
 <table class="barattach-2">
     <tr>
         <td>
@@ -18,7 +39,7 @@
     </tr>
 </table>
 <div class="table-responsive paginated">
-    <table class="table table-striped" onended="SetPaging()">
+    <table id="tblProduct" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
