--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -82,6 +82,10 @@
                     
                 </li>
                 <li>
+                    <label>รายละเอียด</label>
+                    <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
+                </li>
+                <li>
                     <label>หมายเหตุ<span class="required">*</span></label>
                     <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
                 </li>
