--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -72,6 +72,10 @@
                     <input type="hidden" id="hidFilePath" />
                 </li>
                 <li>
+                    <label>รายละเอียด</label>
+                    <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
+                </li>
+                <li>
                     <label>หมายเหตุ</label>
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
