--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -501,10 +501,10 @@
                                                             <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
