--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -47,6 +47,7 @@
                 <th class="Rowpointer">วันที่รับเข้า</th>
                 <th class="Rowpointer">Code</th>
                 <th class="hideANDseek Rowpointer">หมายเลขเครื่อง</th>
+                @*<th class="hideANDseek Rowpointer">ประเภทสินค้า</th>*@
                 <th class="hideANDseek Rowpointer">รายละเอียด</th>
                 <th class="hideANDseek Rowpointer">ยี่ห้อ</th>
                 <th class="hideANDseek Rowpointer">รุ่น</th>
