--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -34,7 +34,7 @@
                         </tr>
                     </table>*@
                     @*<table id="tblQuotation" class="table table-striped table-hover table-responsive">*@
-                    <table id="tblProduct" class="table-striped table-hover table-responsive">
+                    <table id="tblDiaProductAdjust" class="table-striped table-hover table-responsive">
                         <thead class="bgthead bgfont-12">
                             <tr>
                                 <th class="bodypadding-5" colspan="7"><div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div></th>
