--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -12,7 +12,7 @@
     </tr>
 </table>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="tblTechnician" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
@@ -27,4 +27,4 @@
         </thead>
         <tbody id="result"></tbody>
     </table>
-    </div>
+</div>
