--- a/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
@@ -27,7 +27,7 @@
             <div class="modal-body">
                 <div class="table-overflow">
                     @*<table id="tblQuotation" class="table table-striped table-hover table-responsive">*@
-                    <table id="tblProduct" class="table-striped table-hover table-responsive">
+                    <table id="tblDiaProductAdjust" class="table-striped table-hover table-responsive">
                         <thead class="bgthead bgfont-12">
                             <tr>
                                 <th class="bodypadding-5" colspan="7"><div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div></th>
