--- a/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
@@ -43,7 +43,7 @@
     </tr>
 </table>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="tblProductAdjust" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
