--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -11,7 +11,7 @@
         </td>
     </tr>
 </table>
-<div class="table-responsive">
+<div class="table-responsive paginated">
     <table id="tblTechnician" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
