--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -119,7 +119,7 @@
                                         </div>
                                         <div class="grigbar">
                                             <div class="myDIV">
-                                                <table class="table table-striped">
+                                                <table id="tblBDCJOb" class="table table-striped scrolling" onended="SetPaging()">
                                                     <thead class="bgthead">
                                                         <tr>
                                                             <th>No.</th>
