--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -46,7 +46,7 @@
     </tr>
 </table>
 
-<table class="table table-striped">
+<table id="tblExpenseMaster" class="table table-striped scrolling" onended="SetPaging()">
     <thead class="bgthead">
         <tr>
             <th class="Rowpointer">No.</th>
