--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -631,7 +631,7 @@
                                                 <input type="hidden" id="hidIsNewBorrow" />
                                             </div>
                                             <div class="grigbar">
-                                                <table class="table table-striped">
+                                                <table id="tblJobborrow" class="table table-striped scrolling" onended="SetPaging()">
                                                     <thead class="bgthead">
                                                         <tr>
                                                             <th rowspan="2">ลำดับ</th>
