--- a/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "IndexProductAdjust";
 }
 
-<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/CUDS/ProductAdjustment/IndexProductAdjustment.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
