--- a/Alpha/AlphaMvc/Views/ReportBreakdownCost/IndexReportBreakDownCost.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportBreakdownCost/IndexReportBreakDownCost.cshtml
@@ -47,7 +47,7 @@
 </table>
 
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="tblRptBDC" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
