--- a/Alpha/AlphaMvc/Views/ReportJobOrder/IndexReportJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportJobOrder/IndexReportJobOrder.cshtml
@@ -13,7 +13,7 @@
     </tr>
 </table>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="tblRptBDC" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th class="Rowpointer">No.</th>
