--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -43,7 +43,7 @@
     </tr>
 </table>
 @*//===================================================================CSS w3school*@
-<table class="table table-striped">
+<table id="tblSecurityProfile" class="table table-striped scrolling" onended="SetPaging()">
     <thead class="bgthead">
         <tr>
             <th class="Rowpointer">No.</th>
