--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -3,7 +3,6 @@
 }
 
 <h3>Dashboard</h3>
-
 <link href="@Url.Content("~/Content/calendar/fullcalendarCustom.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
@@ -184,7 +183,7 @@ $(document).ready(function () {
 <div id="calendar"></div>
 <div id="calendarManPower"></div>
 <section class="features">
-    <table class="table table-striped">
+    <table id="tblExpiredTechnician" class="table table-striped scrolling" onended="SetPaging()">
         <thead class="bgthead">
             <tr>
                 <th>No.</th>
