--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -12,7 +12,7 @@
         </td>
     </tr>
 </table>
-<table class="table table-striped">
+<table id="tblWageTechnician" class="table table-striped scrolling" onended="SetPaging()">
     <thead class="bgthead">
         <tr>
             <th>No.</th>
