--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -29,7 +29,7 @@
 
     .paging-nav,
     #tableData {
-        width: 400px;
+        /*width: 400px;*/
         margin: 0 auto;
         font-family: Arial, sans-serif;
     }
