--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -31,7 +31,7 @@
 
     .paging-nav,
     #tableData {
-        width: 400px;
+        /*width: 400px;*/
         margin: 0 auto;
         font-family: Arial, sans-serif;
     }
