--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -5,7 +5,7 @@
 <link href="@Url.Content("~/Content/calendar/fullcalendar.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/CalendarJob/CalendarJob.js")" type="text/javascript"></script>
 
@@ -116,7 +116,7 @@ $(document).ready(function () {
         </td>
     </tr>
 </table>
-<table class="table table-striped">
+<table id="tblcalenJob" class="table table-striped scrolling">
     <thead class="bgthead">
         <tr>
             <th class="Rowpointer">No.</th>
