--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -7,7 +7,7 @@
 <link href="@Url.Content("~/Content/calendar/fullcalendar.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/CalendarManPower/CalendarManpower.js")" type="text/javascript"></script>
 
@@ -189,7 +189,7 @@
         </td>
     </tr>
 </table>
-<table class="table table-striped">
+<table id="tblcalenCMP" class="table table-striped scrolling">
     <thead class="bgthead">
         <tr>
             <th class="Rowpointer">No.</th>
