--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -628,7 +628,7 @@
                                         <a href="@Url.Action("CreateBorrow", "Borrow")?@Request.Params["id"]" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                     </div>
                                     <div class="grigbar">
-                                        <table class="table table-striped">
+                                        <table id="tblJobborrow" class="table table-striped scrolling" onended="SetPaging()">
                                             <thead class="bgthead">
                                                 <tr>
                                                     <th rowspan="2">ลำดับ</th>
