--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -3,12 +3,14 @@
 }
 
 <h3>Dashboard</h3>
+<script src="@Url.Content("~/Scripts/CUDS/Technician/TechnicianExpiredCard.js")" type="text/javascript"></script>
+
 <link href="@Url.Content("~/Content/calendar/fullcalendarCustom.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/calendar/fullcalendar.print.min.css")" rel="stylesheet" media="print" type="text/css" />
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/CUDS/Technician/TechnicianExpiredCard.js")" type="text/javascript"></script>
+
 
 <script>
 function GetDetail(currentMonth) {
@@ -183,7 +185,7 @@ $(document).ready(function () {
 <div id="calendar"></div>
 <div id="calendarManPower"></div>
 <section class="features">
-    <table id="tblExpiredTechnician" class="table table-striped scrolling" onended="SetPaging()">
+    <table id="tblExpiredTechnician" class="table table-striped scrolling">
         <thead class="bgthead">
             <tr>
                 <th>No.</th>
