--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -4,6 +4,9 @@
 }
 
 <script src="@Url.Content("~/Scripts/CUDS/Products/CreateProducts.js")" type="text/javascript"></script>
+<link href="http://hayageek.github.io/jQuery-Upload-File/4.0.10/uploadfile.css" rel="stylesheet">
+@*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
+<script src="http://hayageek.github.io/jQuery-Upload-File/4.0.10/jquery.uploadfile.min.js"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     table {
@@ -95,104 +98,23 @@
             </ul>
             <ul class="attachgrid">
                 <li>
-                    <table class="barattach">
+                    @*<table class="barattach">
                         <tr>
-                            <td>
-                                
+                            <td>                             
                                 <div class="topicattach"><a href="#"><img src="@Url.Content("~/Images/attachments2.png")" /></a></div>
                             </td>
                         </tr>
-                    </table>
-                    <table class="example-2" cellspacing="0">
-                        <thead class="theader">
-                            <tr>
-                                <th>No.</th>
-                                <th>File Name</th>
-                                <th>Doc Type</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>File1</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>File2</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>File3</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>File4</td>
-                                <td>
-                                    <select name="D1">
-                                        <option value="volvo">ประเภท1</option>
-                                        <option value="saab">ประเภท2</option>
-                                        <option value="mercedes">ประเภท3</option>
-                                        <option value="mercedes">ประเภท4</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Delete", "Trachnician")">
-                                        <img src="@Url.Content("~/Images/delete.png")" />
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    </table>*@
+                    <input type="file" id="FileUpload1" multiple />
+                    <input type="button" id="btnUpload" value="Upload Files" />  
                 </li>
-                <br />
-            </ul>
-            
+            </ul>      
 </form>
     }
     @*//===================================================================CSS w3school*@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
-        CheckAuthorization();
+        CheckAuthorization();       
     });
 </script>
