--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -23,6 +23,9 @@
                 </li>
                 <li>
                     <input type="text" id="txtFullName" name="field1" class="field-divided" disabled/>
+                    <input type="hidden" id="hidID" />
+                    <input type="hidden" id="hidJobID" />
+                    <input type="hidden" id="hidTechnicianID" />
                 </li>
                 <br />
             </ul>
@@ -52,11 +55,12 @@
                             <th rowspan="2">FROM</th>
                             <th rowspan="2">TO</th>
                             <th rowspan="2">TOTAL HOURS</th>
-                            <th rowspan="2">Normal Hours</th>
-                            <th colspan="3">Overtime</th>
+                            @*<th rowspan="2">Normal Hours</th>*@
+                            <th colspan="4">Overtime</th>
                         </tr>
                         <tr>
-                            <th>Normal(1.5)</th>
+                            <th>Normal Hours</th>
+                            <th>Premium(1.5)</th>
                             <th>Premium(2)</th>
                             <th>Special(3)</th>
                         </tr>
@@ -77,10 +81,11 @@
                         <tr>
                             <td colspan="8">TOTAL (HRS)</td>
                             <td></td>
-                            <td>24.00</td>
-                            <td>2.00</td>
-                            <td>8.00</td>
-                            <td>-</td>
+                            @*<td id="totalNormal">24.00</td>*@
+                            <td id="totalNormal"></td>
+                            <td id="totalPremium"></td>
+                            <td id="totalPremium2"></td>
+                            <td id="totalSpecial"></td>
                             <td>-</td>
                             <td></td>
                             <td></td>
@@ -89,10 +94,10 @@
                         <tr>
                             <td colspan="8">RATE (BAHT)</td>
                             <td></td>
-                            <td>75.00</td>
-                            <td>112.50</td>
-                            <td>150.00</td>
-                            <td>225.00</td>
+                            <td id="totalBathNormal"></td>
+                            <td id="totalBathPremium"></td>
+                            <td id="totalBathPremium2"></td>
+                            <td id="totalBathSpecial"></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -101,14 +106,14 @@
                         <tr>
                             <td colspan="8">AMOUNTS (BAHT)</td>
                             <td></td>
-                            <td>3,600.00</td>
-                            <td>225.50</td>
-                            <td>1,200.00</td>
+                            <td id="totalAmountNormal">3,600.00</td>
+                            <td id="totalAmountPremium">225.50</td>
+                            <td id="totalAmountPremium2">1,200.00</td>
+                            <td id="totalAmountSpecial">-</td>
                             <td>-</td>
                             <td>-</td>
-                            <td>-</td>
-                            <td>5,025.00</td>
-                            <td>(150.75)</td>
+                            <td id="totalAmount">5,025.00</td>
+                            <td id="totalVat">(150.75)</td>
                         </tr>
                         <tr>
                             <td colspan="8">TOTAL WAGES(BAHT)</td>
@@ -120,10 +125,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>4,874.25</td>
+                            <td id="totalWH">4,874.25</td>
                         </tr>
                     </tfoot>
-                    <tbody id="result"></tbody>
+                    <tbody id="result" class="RowCal"></tbody>
                 </table>
             </div>
             <ul class="form-style-1">
@@ -145,5 +150,6 @@
         //ControlEnable(Isview);
 
         GetData(@Request.Params["id"]);
+        GetTotal();
     });
 </script>
