--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -105,8 +105,8 @@
                             </td>
                         </tr>
                     </table>*@
-                    <input type="file" id="FileUpload1" multiple />
-                    <input type="button" id="btnUpload" value="Upload Files" />  
+                    @*<input type="file" id="FileUpload1" multiple />
+                    <input type="button" id="btnUpload" value="Upload Files" />*@  
                 </li>
             </ul>      
 </form>
